--- a/ToDoList/ToDoList/VIew/MainPage.xaml
+++ b/ToDoList/ToDoList/VIew/MainPage.xaml
@@ -3,57 +3,87 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModel="clr-namespace:ToDoList.ViewModel;assembly=ToDoList"
              xmlns:domain="clr-namespace:ToDoList.Domain;assembly=ToDoList"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+             xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
              x:Class="ToDoList.MainPage"
              x:DataType="viewModel:MainViewModel">
 
     <StackLayout Orientation="Vertical" Padding="5">
-        <FlexLayout Direction="Row">
-            <Entry FlexLayout.Grow="0.8"
-                   Text="{Binding NewTodoText}"/>
-            <Button FlexLayout.Grow="0.2" 
-                    ImageSource="outline_add_circle_outline_black_24dp.png" 
-                    CornerRadius="5"
-                    BackgroundColor="Transparent"
-                    Command="{Binding AddTodoItemCommand}"/>
-        </FlexLayout>
-        
+        <Frame Padding="1, 0" 
+               Margin="0, 5"
+               CornerRadius="10"
+               BackgroundColor="#556495ed">
+            <FlexLayout Direction="Row">
+                <Entry FlexLayout.Grow="0.8"
+                       Text="{Binding NewTodoText}"/>
+                <ImageButton FlexLayout.Grow="0.2"
+                             FlexLayout.AlignSelf="Center"
+                             xct:IconTintColorEffect.TintColor="CornflowerBlue"
+                             Source="outline_add_circle_outline_black_24dp.png" 
+                             CornerRadius="5"
+                             HeightRequest="40"
+                             BackgroundColor="Transparent"
+                             Command="{Binding AddTodoItemCommand}"/>
+            </FlexLayout>
+        </Frame>
+
         <StackLayout>
             <BindableLayout.ItemsSource>
                 <Binding Path="TodoItems"/>
             </BindableLayout.ItemsSource>
             <BindableLayout.EmptyViewTemplate>
                 <DataTemplate>
-                    <FlexLayout></FlexLayout>
+                    <FlexLayout Direction="Column">
+                        <Label Text="Что-то пусто?!?"
+                               TextColor="CornflowerBlue"
+                               FontSize="Title"
+                               FlexLayout.Grow="0.1"
+                               FlexLayout.AlignSelf="Center"
+                               HorizontalTextAlignment="Center"/>
+
+                        <forms:AnimationView Animation="empty.json"
+                                             AnimationSource="AssetOrBundle"
+                                             RepeatMode="Infinite"
+                                             AutoPlay="True"
+                                             FlexLayout.Grow="0.9"
+                                             HeightRequest="250"/>
+                    </FlexLayout>
                 </DataTemplate>
             </BindableLayout.EmptyViewTemplate>
             <BindableLayout.ItemTemplate>
                 <DataTemplate x:DataType="{x:Type domain:TodoItem}">
-                    <FlexLayout Direction="Row">
-                        <CheckBox IsChecked="{Binding IsDone, Mode=TwoWay}"/>
-                        <Label TextColor="Red"
-                               FlexLayout.AlignSelf="Center"
-                               FlexLayout.Grow="0.8">
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <Span Text="{Binding Description}"/>
-                                </FormattedString>
-                            </Label.FormattedText>
-                            <Label.Triggers>
-                                <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="True" TargetType="{x:Type Label}">
-                                    <Setter Property="TextDecorations" Value="Strikethrough"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="False" TargetType="{x:Type Label}">
-                                    <Setter Property="TextDecorations" Value="Underline"/>
-                                </DataTrigger>
-                            </Label.Triggers>
-                        </Label>
-                        <Button ImageSource="outline_delete_black_24dp.png"
-                                FlexLayout.Grow="0.2"
-                                CornerRadius="5"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewModel:MainViewModel}}, Path=DeleteTodoItemCommand}"
-                                CommandParameter="{Binding .}"
-                                BackgroundColor="Transparent"/>
-                    </FlexLayout>
+                    <Frame Padding="0">
+                        <StackLayout Orientation="Vertical">
+                            <FlexLayout Direction="Row">
+                                <CheckBox IsChecked="{Binding IsDone, Mode=TwoWay}"/>
+                                <Label Text="{Binding Description}"
+                                       FontSize="Subtitle"
+                                       TextColor="Black"
+                                       FlexLayout.AlignSelf="Center"
+                                       FlexLayout.Grow="0.8">
+                                    <Label.Triggers>
+                                        <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="True" TargetType="{x:Type Label}">
+                                            <Setter Property="TextDecorations" Value="Strikethrough"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="False" TargetType="{x:Type Label}">
+                                            <Setter Property="TextDecorations" Value="Underline"/>
+                                        </DataTrigger>
+                                    </Label.Triggers>
+                                </Label>
+                                <ImageButton Source="outline_delete_black_24dp.png"
+                                             xct:IconTintColorEffect.TintColor="IndianRed"
+                                             HeightRequest="40"
+                                             FlexLayout.Grow="0.2"
+                                             CornerRadius="5"
+                                             Command="{Binding Source={RelativeSource AncestorType={x:Type viewModel:MainViewModel}}, Path=DeleteTodoItemCommand}"
+                                             CommandParameter="{Binding .}"
+                                             BackgroundColor="Transparent"/>
+
+                            </FlexLayout>
+
+                            <BoxView BackgroundColor="CornflowerBlue" HeightRequest="1"/>
+                        </StackLayout>
+                    </Frame>
                 </DataTemplate>
             </BindableLayout.ItemTemplate>
         </StackLayout>
