Добавлено описание и редактирование задачки

--- a/ToDoList/ToDoList/VIew/MainPage.xaml
+++ b/ToDoList/ToDoList/VIew/MainPage.xaml
@@ -6,17 +6,23 @@
              xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
              xmlns:xamanimation="clr-namespace:Xamanimation;assembly=Xamanimation"
+             xmlns:behaviors="clr-namespace:Xamanimation.Behaviors;assembly=Xamanimation"
+             xmlns:toDoList="clr-namespace:ToDoList;assembly=ToDoList"
              x:Class="ToDoList.MainPage"
              x:DataType="viewModel:MainViewModel">
-    <StackLayout Orientation="Vertical" Padding="5">
-        <Frame Padding="1, 0" 
-               Margin="0, 5"
-               CornerRadius="10"
-               BackgroundColor="#556495ed">
-            <FlexLayout Direction="Row">
-                <Entry FlexLayout.Grow="0.85"
+    <Grid>
+        <StackLayout Orientation="Vertical" Padding="5">
+            <StackLayout.GestureRecognizers>
+                <PanGestureRecognizer PanUpdated="PanGestureRecognizer_OnPanUpdated"/>
+            </StackLayout.GestureRecognizers>
+            <Frame Padding="1, 0" 
+                   Margin="0, 5"
+                   CornerRadius="10"
+                   BackgroundColor="#556495ed">
+                <FlexLayout Direction="Row">
+                    <Entry FlexLayout.Grow="0.85"
                        Text="{Binding NewTodoText}"/>
-                <ImageButton FlexLayout.Grow="0.15"
+                    <ImageButton FlexLayout.Grow="0.15"
                              FlexLayout.AlignSelf="Center"
                              xct:IconTintColorEffect.TintColor="CornflowerBlue"
                              Source="outline_add_circle_outline_black_24dp.png" 
@@ -24,69 +30,78 @@
                              HeightRequest="40"
                              BackgroundColor="Transparent"
                              Command="{Binding AddTodoItemCommand}"/>
-            </FlexLayout>
-        </Frame>
-        <ScrollView>
-            <StackLayout>
-                <BindableLayout.ItemsSource>
-                    <Binding Path="TodoItems"/>
-                </BindableLayout.ItemsSource>
-                <BindableLayout.EmptyViewTemplate>
-                    <DataTemplate>
-                        <FlexLayout Direction="Column">
-                            <Label Text="Что-то пусто?!?"
+                </FlexLayout>
+            </Frame>
+            <ScrollView>
+                <FlexLayout Direction="Column">
+                    <FlexLayout.Behaviors>
+                        <xamanimation:EntranceTransition
+                        Duration="150"/>
+                    </FlexLayout.Behaviors>
+                    <BindableLayout.ItemsSource>
+                        <Binding Path="TodoItems"/>
+                    </BindableLayout.ItemsSource>
+                    <BindableLayout.EmptyViewTemplate>
+                        <DataTemplate>
+                            <FlexLayout Direction="Column">
+                                <Label Text="Что-то пусто?!?"
                                TextColor="CornflowerBlue"
                                FontSize="Title"
                                FlexLayout.Grow="0.1"
                                FlexLayout.AlignSelf="Center"
                                HorizontalTextAlignment="Center"/>
 
-                            <forms:AnimationView Animation="empty.json"
+                                <forms:AnimationView Animation="empty.json"
                                              AnimationSource="AssetOrBundle"
                                              RepeatMode="Infinite"
                                              AutoPlay="True"
                                              FlexLayout.Grow="0.9"
                                              HeightRequest="250"/>
-                        </FlexLayout>
-                    </DataTemplate>
-                </BindableLayout.EmptyViewTemplate>
-                <BindableLayout.ItemTemplate>
-                    <DataTemplate x:DataType="{x:Type domain:TodoItem}">
-                        <Frame Padding="0" x:Name="todoItem">
-                            <Frame.Resources>
-                                <xamanimation:TranslateToAnimation 
-                                x:Key="DeleteAnimation"
-                                Target="{x:Reference todoItem}"
-                                Easing="Linear"
-                                TranslateX="2000"
-                                Duration="600"/>
-                            </Frame.Resources>
-                            <StackLayout Orientation="Vertical">
-                                <FlexLayout Direction="Row">
-                                    <CheckBox IsChecked="{Binding IsDone, Mode=TwoWay}"/>
-                                    <Label Text="{Binding Description}"
+                            </FlexLayout>
+                        </DataTemplate>
+                    </BindableLayout.EmptyViewTemplate>
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate x:DataType="{x:Type domain:TodoItem}">
+                            <Frame Padding="0" x:Name="todoItem">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="FrameTapGestureRecognizer_OnTapped"
+                                                          Command="{Binding Source={RelativeSource AncestorType={x:Type viewModel:MainViewModel}}, Path=SelectTodoItemCommand}"
+                                                          CommandParameter="{Binding .}"/>
+                                </Frame.GestureRecognizers>
+                                <Frame.Resources>
+                                    <xamanimation:TranslateToAnimation 
+                                        x:Key="DeleteAnimation"
+                                        Target="{x:Reference todoItem}"
+                                        Easing="Linear"
+                                        TranslateX="2000"
+                                        Duration="600"/>
+                                </Frame.Resources>
+                                <StackLayout Orientation="Vertical">
+                                    <FlexLayout Direction="Row">
+                                        <CheckBox IsChecked="{Binding IsDone, Mode=TwoWay}"/>
+                                        <Label Text="{Binding Title}"
                                        FontSize="24"
                                        TextColor="Black"
                                        FlexLayout.AlignSelf="Center"
                                        FlexLayout.Grow="0.85">
-                                        <Label.Triggers>
-                                            <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="True" TargetType="{x:Type Label}">
-                                                <Setter Property="TextDecorations" Value="Strikethrough"/>
-                                                <DataTrigger.EnterActions>
-                                                    <xamanimation:AnimateColor TargetProperty="Label.TextColor" To="Plum" Duration="200"/>
-                                                    <xamanimation:AnimateDouble TargetProperty="Label.FontSize" From="24" To="20" Duration="200"/>
-                                                </DataTrigger.EnterActions>
-                                            </DataTrigger>
-                                            <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="False" TargetType="{x:Type Label}">
-                                                <Setter Property="TextDecorations" Value="Underline"/>
-                                                <DataTrigger.EnterActions>
-                                                    <xamanimation:AnimateDouble TargetProperty="Label.FontSize" From="20" To="24" Duration="200"/>
-                                                    <xamanimation:AnimateColor TargetProperty="Label.TextColor" From="Plum" To="Black" Duration="200"/>
-                                                </DataTrigger.EnterActions>
-                                            </DataTrigger>
-                                        </Label.Triggers>
-                                    </Label>
-                                    <ImageButton Source="outline_delete_black_24dp.png"
+                                            <Label.Triggers>
+                                                <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="True" TargetType="{x:Type Label}">
+                                                    <Setter Property="TextDecorations" Value="Strikethrough"/>
+                                                    <DataTrigger.EnterActions>
+                                                        <xamanimation:AnimateColor TargetProperty="Label.TextColor" To="Plum" Duration="200"/>
+                                                        <xamanimation:AnimateDouble TargetProperty="Label.FontSize" From="24" To="20" Duration="200"/>
+                                                    </DataTrigger.EnterActions>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding IsDone, Mode=OneWay}" Value="False" TargetType="{x:Type Label}">
+                                                    <Setter Property="TextDecorations" Value="Underline"/>
+                                                    <DataTrigger.EnterActions>
+                                                        <xamanimation:AnimateDouble TargetProperty="Label.FontSize" From="20" To="24" Duration="200"/>
+                                                        <xamanimation:AnimateColor TargetProperty="Label.TextColor" From="Plum" To="Black" Duration="200"/>
+                                                    </DataTrigger.EnterActions>
+                                                </DataTrigger>
+                                            </Label.Triggers>
+                                        </Label>
+                                        <ImageButton Source="outline_delete_black_24dp.png"
                                              xct:IconTintColorEffect.TintColor="IndianRed"
                                              HeightRequest="40"
                                              FlexLayout.Grow="0.15"
@@ -94,23 +109,76 @@
                                              Command="{Binding Source={RelativeSource AncestorType={x:Type viewModel:MainViewModel}}, Path=DeleteTodoItemCommand}"
                                              CommandParameter="{Binding .}"
                                              BackgroundColor="Transparent">
-                                        <ImageButton.Triggers>
-                                            <EventTrigger Event="Clicked">
-                                                <xamanimation:BeginAnimation
+                                            <ImageButton.Triggers>
+                                                <EventTrigger Event="Clicked">
+                                                    <xamanimation:BeginAnimation
                                                 Animation="{StaticResource DeleteAnimation}" />
-                                            </EventTrigger>
-                                        </ImageButton.Triggers>
-                                    </ImageButton>
+                                                </EventTrigger>
+                                            </ImageButton.Triggers>
+                                        </ImageButton>
 
-                                </FlexLayout>
+                                    </FlexLayout>
 
-                                <BoxView BackgroundColor="CornflowerBlue" HeightRequest="1"/>
-                            </StackLayout>
-                        </Frame>
-                    </DataTemplate>
-                </BindableLayout.ItemTemplate>
+                                    <BoxView BackgroundColor="CornflowerBlue" HeightRequest="1"/>
+                                </StackLayout>
+                            </Frame>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </FlexLayout>
+            </ScrollView>
+        </StackLayout>
+
+        <!--Backdrop-->
+        <BoxView Color="#4B000000"
+                 Opacity="0"
+                 InputTransparent="True"
+                 x:Name="Backdrop">
+            <BoxView.GestureRecognizers>
+                <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped"/>
+            </BoxView.GestureRecognizers>
+        </BoxView>
+
+        <!--Bottom Drawer-->
+        <Frame x:Name="EditFormDrawer"
+               HeightRequest="400"
+               BackgroundColor="White"
+               CornerRadius="20"
+               TranslationY="460"
+               VerticalOptions="End"
+               Padding="15, 6">
+            <Frame.GestureRecognizers>
+                <!--<PanGestureRecognizer PanUpdated="PanGestureRecognizer_OnPanUpdated"/>-->
+                <SwipeGestureRecognizer Swiped="SwipeGestureRecognizer_OnSwiped" Direction="Down"
+                                        Command="{Binding ResetSelectedTodoItemCommand}"/>
+            </Frame.GestureRecognizers>
+
+            <VisualElement.Behaviors>
+                <!--DOESN'T WORK-->
+                <!--<xamanimation:AnimateProgressDouble
+                    TargetProperty="VisualElement.TranslationY"
+                    Progress="{Binding Path=TranslationYEditForm}" 
+                    Minimum="0"
+                    Maximum="200"
+                    From="0"
+                    To="100"/>-->
+                
+            </VisualElement.Behaviors>
+            <StackLayout Orientation="Vertical" Padding="0, 4">
+                <BoxView CornerRadius="2" 
+                         HeightRequest="4" 
+                         WidthRequest="40"
+                         BackgroundColor="LightGray"
+                         HorizontalOptions="Center"/>
+                <Label Text="Редактирование"
+                       HorizontalOptions="Center"
+                       FontSize="18"
+                       FontAttributes="Bold"/>
+                <Entry Placeholder="Заголовок"
+                       Text="{Binding SelectedTodoItem.Title}"/>
+                <Entry Placeholder="Описание"
+                       Text="{Binding SelectedTodoItem.Description}"/>
             </StackLayout>
-        </ScrollView>
-    </StackLayout>
 
+        </Frame>
+    </Grid>
 </ContentPage>
